--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: ruby
 rvm: 2.1.2
+addons:
+  code_climate:
+    repo_token: 58717000233e2eba64f18993364e4689b9c3e862a3e775d14890cd235979a7f9 
