--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: ruby
 rvm: 2.1.2
 addons:
   code_climate:
-    repo_token: 58717000233e2eba64f18993364e4689b9c3e862a3e775d14890cd235979a7f9 
+    repo_token: 58717000233e2eba64f18993364e4689b9c3e862a3e775d14890cd235979a7f9
+notifications:
+  slack:
+    rooms:
+      - secure: VnXzbJEGFsHRZN0alas2Yu7o22VyXEnVlqIebI99yMZgULKh1IGA7uvGGOAyvIxTIAoY9yWm44RghBMSwYEZjoNgXNFC0EEl66sYdEgw2pEmza8ydlolFLsjX5RFIsbPSGHQArNBnV1sYuuP7452TheDn/BJTi53tnR+B4tF2JU=
