:sparkles: Update rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,10 @@ AllCops:
     - 'spec/**/*'
     - 'features/**/*'
     - 'test/**/*'
+    - 'Gemfile'
+    - 'Guardfile'
+    - 'Rakefile'
+    - '*.gemspec'
 
 Metrics/ClassLength:
   Max: 150
@@ -22,7 +26,7 @@ AndOr:
 ParenthesesAroundCondition:
   Enabled: false
 
-MethodCallParentheses:
+Style/MethodCallWithoutArgsParentheses:
   Enabled: false
 
 # why use this option ?
@@ -38,7 +42,7 @@ CyclomaticComplexity:
 Next:
   Enabled: false
 
-Style/AlignHash:
+Layout/AlignHash:
   Enabled: false
 
 Style/RaiseArgs:
@@ -53,5 +57,30 @@ Metrics/AbcSize:
 Metrics/LineLength:
   Max: 100
   IgnoredPatterns: [
-    '^\s*#'
+    '^\s*#',
+    'ruby wrapper for the Bitbucket REST API*'
   ]
+
+Style/SymbolArray:
+  Enabled: false
+
+Style/FormatStringToken:
+  Enabled: false
+
+Style/RescueStandardError:
+  Enabled: false
+
+Style/PercentLiteralDelimiters:
+  Enabled: false
+
+Layout/SpaceAroundOperators:
+  Enabled: false
+
+Layout/ExtraSpacing:
+  Enabled: false
+
+Style/SafeNavigation:
+  Enabled: false
+
+Lint/DuplicateMethods:
+  Enabled: false
