--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            - v1-dependencies-{{ checksum "Gemfile" }}-{{ checksum "tinybucket.gemspec" }}
             - v1-dependencies-
       - run:
           name: install dependencies
@@ -17,7 +17,7 @@ jobs:
       - save_cache:
           paths:
             - .bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+          key: v1-dependencies-{{ checksum "Gemfile" }}-{{ checksum "tinybucket.gemspec" }}
       - run:
           name: fetch coverage reporter
           command: |
