--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,10 @@ jobs:
           cache-version: ${{ runner.os }}-${{ runner.ruby }}-${{ hashFiles('Gemfile.lock', 'tinybucket.gemspec') }}
       - name: Install dependencies
         run: bundle install
-      - name: Run rspec
-        run: bundle exec rake spec
+      - name: Run spec & publish coverage
+        uses: paambaati/codeclimate-action@v3.2.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: bundle exec rake spec
+          coverageLocations: ${{ github.workspace }}/coverage:simplecov
