Adjust coverageLocations path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: bundle exec rake spec
-          coverageLocations: ${{ github.workspace }}/coverage:simplecov
+          coverageLocations: ${{ github.workspace }}/coverage/coverage.json:simplecov
